LittleDoctorUpdate/little-doctor-academy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infogrid
  labels:
    app.kubernetes.io/part-of: littledoctor
